# httprs

./: .gitignore  Cargo.toml  README.md  teste.html
httprs/: Cargo.toml
httprs/src/: connection.rs  headers.rs  lib.rs  methods.rs  request.rs  response.rs  url.rs
src/: connection.rs  headers.rs  main.rs  methods.rs  mod.rs  request.rs  response.rs  url.rs
