[package]
name = "http-client"
version = "0.1.0"
authors = ["lohxx <lohanna.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.19.0"
webpki = "0.21.4"
webpki-roots = "0.21.0"
trust-dns-client = "0.19.6"
trust-dns-proto = "0.19.6"
native-tls = "0.2"
