[package]
name = "httprs"
version = "0.1.0"
authors = ["lohxx <lohanna.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
native-tls = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"