[package]
name = "httprs"
version = "0.1.0"
authors = ["lohxx <lohanna.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
native-tls = "0.2"
trust-dns-client = "0.20.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"
lazy_static = "1.4.0"